<resources>
    <string name="app_name">Bm443Android</string>
    <string name="sayi_1_hint">Sayı 1</string>
    <string name="sayi_2_hint">Sayı 2</string>
    <string name="topla_button">Topla</string>
    <string name="cikar_button">Çıkar</string>
    <string name="sonuc_label">Sonuç: %1$d</string>
    <string name="bol_button">Bol</string>
    <string name="error_invalid_input">Lütfen geçerli sayılar girin.</string>
    <string name="toplama_ekran_na_git">Toplama Ekranına Git</string>
    <string name="karma_ekran_na_git">Çıkarma Ekranına Git</string>
    <string name="b_lme_ekran_na_git">Bölme Ekranına Git</string>
    <string name="kayit_ekrani">Kayit ekranina git</string>
    <string name="telefon_numaran_z">Telefon Numaranız</string>
    <string name="kay_t_ol">Kayıt Ol</string>
    <string name="kay_t_formu">Kayıt Formu</string>
    <string name="click_count_msg">Tıklanma Sayısı: %1$d</string>
    <string name="b_l_m_n_z_se_in">Bölümünüzü Seçin</string>
    <string name="mail">Mail adresini giriniz</string>
    <string name="validasyon">validasyon\n</string>
    <string name="ad">ad</string>
    <string name="soyad">soyad\n\t\t\t\t</string>
    <string name="ho_geldin">"Hoşgeldin "</string>
    <string name="durdur">Durdur</string>
    <string name="ba_lat">Başlat</string>
</resources>
