<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ValidationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Title / Label -->
        <EditText
            android:id="@+id/txtAd"
            style="@style/duyuru"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:text="@string/ad"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtSoy"
            style="@style/duyuru"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:text="@string/soyad"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Action Button (Material Design) -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnKaydet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kay_t_ol"
            app:cornerRadius="8dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>