<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">


    <EditText
        android:id="@+id/txtSayi1"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:hint="@string/sayi_1_hint"
        android:inputType="number"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/my_light_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <EditText
        android:id="@+id/txtSayi2"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:hint="@string/sayi_2_hint"
        android:inputType="number"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/my_light_primary"
        app:layout_constraintTop_toBottomOf="@+id/txtSayi1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/tpla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topla_button"
        android:layout_marginTop="32dp"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/material_dynamic_neutral0"
        app:layout_constraintTop_toBottomOf="@+id/txtSayi2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/add_ic"
        />

    <TextView
        android:id="@+id/lblSonuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="Sonuç"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tpla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
